--- a/flask_app/templates/cover.html
+++ b/flask_app/templates/cover.html
@@ -21,7 +21,10 @@
         <div class="ui massive borderless inverted menu">
           <div class="right item">
             <div class="ui massive secondary inverted pointing menu">
-              <a class="active item">Home</a><a class="item" href="/about">About</a><a class="item" href="/contact">Contact</a>
+              <a class="active item">Home</a>
+              <a class="item" href="/about">About</a>
+              <a class="item" href="/contact">Contact</a>
+              <a class="item" href="/3dplot_template">Plots</a>
             </div>
           </div>
         </div>
