fixed broken links on headers

--- a/flask_app/templates/3dplot_template.html
+++ b/flask_app/templates/3dplot_template.html
@@ -1,3 +1,42 @@
+<html lang="en">
+<head>
+
+  <meta charset="utf-8">
+
+  <title>Purple Briefcase Job Recommender</title>
+
+  <meta name="description" content="The Purple Briefcase Job Recommender">
+  <meta name="author" content="Dan Edstrom">
+
+
+  <link rel="stylesheet" type="text/css" href="../static/semantic-ui/dist/semantic.min.css">
+  <script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+  <script src="../static/semantic-ui/dist/semantic.min.js"></script>
+
+  <link rel="stylesheet" type="text/css" href="../static/semantic-ui/dist/components/accordion.css">
+  <script type="text/javascript" src="../static/semantic-ui/dist/components/accordion.js"></script>
+
+  <link rel="stylesheet" type="text/css" href="../static/style.css">
+  <script type="text/javascript" src="../static/predict.js"></script>
+  <link rel="stylesheet" type="text/css" href="../static/predict.css">
+
+</head>
+
+<body>
+  <div class="ui fixed  menu">
+    <div class="ui container">
+      <a href="/" class="header item">
+        <!-- <img class="logo" src="assets/images/logo.png"> -->
+        The Purple Briefcase Job Recommender
+      </a>
+      <a href="/submit" class="item">New Search</a>
+
+    </div>
+  </div>
+
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 <div id="8bfe1481-6eea-4403-b309-9aabc38ec614" style="height: 100%; width: 100%;" class="plotly-graph-div"></div>
@@ -15,3 +54,6 @@
       {"margin": {"l": 0, "r": 0, "b": 0, "t": 0}},
       {"showLink": false, "linkText": "Export to plot.ly"})
   </script>
+
+</body>
+</html>
