--- a/flask_app/templates/about.html
+++ b/flask_app/templates/about.html
@@ -30,11 +30,11 @@
 <body>
   <div class="ui fixed  menu">
     <div class="ui container">
-      <a href="#" class="header item">
+      <a href="/" class="header item">
         <!-- <img class="logo" src="assets/images/logo.png"> -->
         The Purple Briefcase Job Recommender
       </a>
-      <a href="submit.html" class="item">New Search</a>
+      <a href="/submit" class="item">New Search</a>
 
     </div>
   </div>
