--- a/flask_app/templates/contact.html
+++ b/flask_app/templates/contact.html
@@ -30,11 +30,11 @@
 <body>
   <div class="ui fixed  menu">
     <div class="ui container">
-      <a href="#" class="header item">
+      <a href="/" class="header item">
         <!-- <img class="logo" src="assets/images/logo.png"> -->
         The Purple Briefcase Job Recommender
       </a>
-      <a href="submit.html" class="item">New Search</a>
+      <a href="/submit" class="item">New Search</a>
 
     </div>
   </div>
@@ -50,28 +50,22 @@
       <div class="ui divider"></div>
 
       <div class="ui three column stackable grid">
-        <img class="wireframe" src="../static/images/Edstrom_Headshot.jpg" height="250" width="250"/>
+        <img class="wireframe" src="../static/images/Edstrom_Headshot.jpg" height="220" width="250"/>
         <div class="column">
           <div class="ui card">
             <div class="content">
               <div class="header">Contact Me</div>
             </div>
             <div class="extra content">
-              <span class="left floated">
-                <i class="left floated world icon"></i>
-                Denver, CO
-              </span>
-            </div>
-            <div class="ui bottom attached button">
-              <i class="LinkedIn square"></i>
+              <i class="linkedin square icon"></i>
               <a href="https://www.linkedin.com/in/danedstrom/">LinkedIn</a>
             </div>
-            <div class="ui bottom attached button">
-              <i class="Github square"></i>
+            <div class="extra content">
+              <i class="github square icon"></i>
               <a href="https://github.com/dedstrom611">Github</a>
             </div>
-          <div class="ui bottom attached button">
-            <i class="Address Card"></i>
+          <div class="extra content">
+            <i class="mail icon"></i>
             <a href="mailto:dedstrom611@gmail.com">Email</a>
           </div>
           </div>
