--- a/flask_app/templates/cover.html
+++ b/flask_app/templates/cover.html
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="ui inverted vertical footer segment">
-        Designed for <a href="http://www.purplebriefcase.com/">Purple Briefcase</a>, by <a href="https://github.com/dedstrom611/spotified_job_search">Dan Edstrom (@dedstrom611)</a>.
+        Designed for <a href="http://www.purplebriefcase.com/">Purple Briefcase</a>, Github repo can be found at: <a href="https://github.com/dedstrom611/spotified_job_search">Dan Edstrom (@dedstrom611)</a>.
       </div>
     </div>
     <style type="text/css">
