--- a/flask_app/templates/3dplot_template.html
+++ b/flask_app/templates/3dplot_template.html
@@ -43,17 +43,49 @@
   <script type="text/javascript">window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL="https://plot.ly";Plotly.newPlot("8bfe1481-6eea-4403-b309-9aabc38ec614",
   [{"type":
     "scatter3d",
-    "x": {{ x|safe }},
-    "y": {{ y|safe }},
-    "z": {{ z|safe }},
+    "x": {{ x1|safe }},
+    "y": {{ y1|safe }},
+    "z": {{ z1|safe }},
     "mode": "markers",
     "marker":
-      {"size": 5, "color": {{ c|safe }},
+      {"size": 5, "color": {{ c1|safe }},
       "colorscale": "Portland",
       "opacity": 0.5}}],
       {"margin": {"l": 0, "r": 0, "b": 0, "t": 0}},
       {"showLink": false, "linkText": "Export to plot.ly"})
   </script>
+
+  <!-- <div id="8bfe1481-6eea-4403-b309-9aabc38ec614" style="height: 100%; width: 100%;" class="plotly-graph-div"></div>
+    <script type="text/javascript">window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL="https://plot.ly";Plotly.newPlot("8bfe1481-6eea-4403-b309-9aabc38ec614",
+    [{"type":
+      "scatter3d",
+      "x": {{ x2|safe }},
+      "y": {{ y2|safe }},
+      "z": {{ z2|safe }},
+      "mode": "markers",
+      "marker":
+        {"size": 5, "color": {{ c2|safe }},
+        "colorscale": "Portland",
+        "opacity": 0.5}}],
+        {"margin": {"l": 0, "r": 0, "b": 0, "t": 0}},
+        {"showLink": false, "linkText": "Export to plot.ly"})
+    </script>
+
+    <div id="8bfe1481-6eea-4403-b309-9aabc38ec614" style="height: 100%; width: 100%;" class="plotly-graph-div"></div>
+      <script type="text/javascript">window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL="https://plot.ly";Plotly.newPlot("8bfe1481-6eea-4403-b309-9aabc38ec614",
+      [{"type":
+        "scatter3d",
+        "x": {{ x3|safe }},
+        "y": {{ y3|safe }},
+        "z": {{ z3|safe }},
+        "mode": "markers",
+        "marker":
+          {"size": 5, "color": {{ c3|safe }},
+          "colorscale": "Portland",
+          "opacity": 0.5}}],
+          {"margin": {"l": 0, "r": 0, "b": 0, "t": 0}},
+          {"showLink": false, "linkText": "Export to plot.ly"})
+      </script> -->
 
 </body>
 </html>
