--- a/flask_app/templates/about.html
+++ b/flask_app/templates/about.html
@@ -59,25 +59,26 @@
             <div class="content">
               <h4 class="ui sub header">Description</h4>
                 17 years of experience applying data science and analytics to help solve
-                higher education's most pressing challenges. In addition to turning data
-                into information and insight, I am passionate about the development of
-                emerging leaders and serving as a change agent to teams.
+                higher education's most pressing challenges. In addition to utilizing the
+                latest in machine learning algorithms, I believe success in data science
+                is rooted in being endlessly inquisitive and making insights accessible
+                to everyone.
               <h4 class="ui sub header">Education</h4>
                 <ul>
-                  <li>Galvanize DSI</li>
-                  <li>Colorado State University</li>
-                  <li>U. of Wisconsin Madison</li>
+                  <li>Fellow - Galvanize DSI</li>
+                  <li>MS Statistics - Colorado State University</li>
+                  <li>BS Mathematics - U. of Wisconsin Madison</li>
               </ul>
             </div>
             <div class="extra content">
-              <span class="right floated">
-                <i class="right floated world icon"></i>
+              <span class="left floated">
+                <i class="left floated world icon"></i>
                 Denver, CO
               </span>
             </div>
             <div class="ui bottom attached button">
               <i class="info circle icon"></i>
-              <a href="https://www.linkedin.com/in/danedstrom/">Connect With Me</a>
+              <a href="/contact">Connect With Me</a>
             </div>
           </div>
         </div>
