--- a/flask_app/templates/predict.html
+++ b/flask_app/templates/predict.html
@@ -30,7 +30,7 @@
 <body>
   <div class="ui fixed  menu">
     <div class="ui container">
-      <a href="/cover" class="header item">
+      <a href="/" class="header item">
         <!-- <img class="logo" src="assets/images/logo.png"> -->
         The Purple Briefcase Job Recommender
       </a>
